--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,11 @@
       "env": {
         "GO_BUILD_FLAGS": "-ldflags '-s -w'"
       }
-    }
+    },
+    "rewrites": [
+        {
+            "source": "(.*)",
+            "destination": "api/index.go"
+        }
+    ]
   }
